--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,16 @@
     background: transparent;
 }
 
+.min-h-screen {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensures full height */
+}
+
+.content {
+    flex: 1; /* Makes the main content area take available space */
+}
+
 .slider::-webkit-slider-thumb{
     appearance: none;
     width: 30px;
